added other API elements

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <div class="container">
-      <div class="col-3">
+      <div class="col-2">
         <input type="text" id="city-input" placeholder="Seattle" />
         <button type="submit" id="submitBtn">Search</button>
       </div>
@@ -28,7 +28,7 @@
       </div>
 
       <div class="row">
-        <div class="col-9">
+        <div class="col-10 card-container">
           col 2
         </div>
       </div>
