--- a/index.html
+++ b/index.html
@@ -15,22 +15,14 @@
       <h1>Weather Forecast</h1>
     </header>
 
-    <div class="container">
+    <div>
       <div class="col-2">
         <input type="text" id="city-input" placeholder="Seattle" />
         <button type="submit" id="submitBtn">Search</button>
       </div>
 
       <div class="row">
-        <div class="col-9">
-          col 1
-        </div>
-      </div>
-
-      <div class="row">
-        <div class="col-10 card-container">
-          col 2
-        </div>
+        <div class="col-10 card-container"></div>
       </div>
     </div>
 
