--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <div class="col-2">
         <input type="text" id="city-input" placeholder="Seattle" />
         <button type="submit" id="submitBtn">Search</button>
+        <div class="input-container">
+        </div>
       </div>
 
       <div class="row">
