added a little styling

--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
       <h1>Weather Forecast</h1>
     </header>
 
-    <div>
-      <div class="col-2">
+    <div class="row">
+      <div class="col-2 search-container">
+        <h2 class="search-label">Search a city:</h2>
         <input type="text" id="city-input" placeholder="Seattle" />
         <button type="submit" id="submitBtn">Search</button>
         <div class="input-container">
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-10 card-container"></div>
+      <div class="col-10">
+        <div class="card-container"></div>
       </div>
     </div>
 
