--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-2">
+        <div class="col-12 col-lg-2 my-cute-border">
           <h2 class="search-label">Search a city:</h2>
           <input type="text" id="city-input" placeholder="Seattle" />
           <button type="submit" id="submitBtn">Search</button>
@@ -25,7 +25,7 @@
           </div>
         </div>
 
-        <div class="col-10">
+        <div class="col-12 col-lg-10">
           <div class="card-container row"></div>
         </div>
       </div>
